--- a/BootstrapOne/css/bootstrapone.css
+++ b/BootstrapOne/css/bootstrapone.css
@@ -47,3 +47,9 @@
 .modal-content{
 	text-align: center;
 }
+.accordion-button:not(.collapsed) {
+	color: #fff !important;
+	background-color: #0B5345 !important;
+	box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
+
+}
